app/src/test/resources/programs/invalid/foonctions/badNamedArgument.extension
foo g(a: Int) -> Int = {
    a + 2
}

foo main() -> Int = {
    g(b=3)
}
